Fixed uneven spacing in asset chunk editor

--- a/src/css/boom/assets/chunk-editor.less
+++ b/src/css/boom/assets/chunk-editor.less
@@ -39,6 +39,7 @@
 				width: 5rem;
 				display: inline-block;
 				float: left;
+				margin-bottom: 1em;
 			}
 
 			input, textarea {
